CR-2002-11-22-3  Testsuite: qmod - reschedule test:
                               parallel job test should not submit job with
                               -t 1 parameter (-t 1 is now a task job, this
                               leaded into a missinterpretation of testsuite)

CR-2002-11-22-2  Testsuite: qrsh output change in maintrunc - adapted changes
                            into testsuite

CR-2002-11-22-0  Bugfix:    Uninitialized pointer caused segmentation fault in qsh/qrsh
                            on submit only hosts.
                 Testsuite: more info output for submit_hosts test

CR-2002-11-21-1  Testsuite: new testsuite configuration parameter: add_compile_archs
                              - new ts_config_version is 1.2
                              - Forced compilation for specified architectures
                              

CR-2002-11-21-0  Testsuite: remove source code macro dump file after source
                            code update ( procedure compile_source() ) and
                            create a new one.

CR-2002-11-20-1  Testsuite: install_core_system check doesn't work without 
                 Bugfix:    root password (noroot)

CR-2002-11-20-0  Testsuite: Added l10n enhancements, new configuration files
                            (new procedures for file spooling, gettext features,
                             sge_macro (use macros from source code) ...)

EB-2002-11-15-0  Testsuite: Added new tests which will find bug #126
                 IZ:        #427

EB-2002-11-20-0  Bugfix:    race condition if signals are to be delivered in
                            job's startup phase
                 IZ:        #126
                 Bugtraq:   #4780316
                 Review:    AH

CR-2002-11-19-3  L10N       - modified message definitions
                            - new command line parameters for infotext:
                              raw     : return localized format string