@@ -87,6 +87,13 @@ proc binary_submission_setup  {} {
    global CHECK_OUTPUT 
    global CHECK_CORE_MASTER
 
+
+
+   if { [resolve_version] <= 2 } {
+      set_error -3 "setup_queues - sge/ee version \"[get_version_info]\" doesn't support binary submission"
+      return 1
+   }
+
    #
    # Save sge_aliases file which was created during installation
    #
@@ -101,6 +108,12 @@ proc binary_submission_setup  {} {
 
 proc binary_submission_cleanup  {} {
    global CHECK_OUTPUT CHECK_PRODUCT_ROOT CHECK_ARCH CHECK_CORE_MASTER
+
+
+   if { [resolve_version] <= 2 } {
+      set_error -3 "setup_queues - sge/ee version \"[get_version_info]\" doesn't support binary submission"
+      return 1
+   }
 
    puts $CHECK_OUTPUT "binary_submission_cleanup ..."
 
@@ -122,7 +135,14 @@ proc binary_submission_check {} {
    global CHECK_OUTPUT CHECK_PRODUCT_ROOT CHECK_ARCH
    global CHECK_HOST CHECK_USER
    global qrsh_hostlist open_spawn_buffer 
-  
+ 
+    
+   if { [resolve_version] <= 2 } {
+      set_error -3 "setup_queues - sge/ee version \"[get_version_info]\" doesn't support binary submission"
+      return 1
+   }
+
+ 
    puts $CHECK_OUTPUT "binary_submission_check ..."
 
    #
